--- a/src/input.css
+++ b/src/input.css
@@ -17,7 +17,7 @@
             @apply w-full px-3 py-2 bg-input border-none
         }
         .nav-link{
-            @apply py-2 md:py-0
+            @apply py-2 md:py-0 text-[#8C8A8A]
         }
         .nav-link:hover {
              @apply text-[#E1A635];
