add media query points

--- a/css/index.css
+++ b/css/index.css
@@ -27,3 +27,15 @@ font-family: 'Mustica Pro Sans Serif', sans-serif;
 .nav-list li a.active{
     color: black;
 }
+
+@media screen and (max-width: 768px) {
+ .nav-list{
+    display: none;
+ }
+ #menuIcon{
+    display: block;
+ }
+ .close-icon{
+    display: block;
+ }
+}
